package org.tavoo.entity;

public enum CourseType {
    ANTIPASTO,
    PRIMO,
    SECONDO,
    STEAK,
    DESSERT,
    BEVERAGE
}
