package org.tavoo.entity;

public enum LocationType {
    INSIDE,
    OUTSIDE
}
