package org.tavoo.entity;

public enum MenuCategory {
    FOOD,
    DESSERT,
    BEVERAGE,
    ALCOHOL
}
