package org.tavoo.entity;

public enum OrderStatus {
    OPEN,
    PAID
}
