package org.tavoo.entity;

public enum PreparationStatus {
    ON_HOLD,
    ORDERED,
    IN_PREPARATION,
    READY,
    SERVED
}
