package org.tavoo.entity;

public enum Role {
    ADMIN,
    WAITER,
    KITCHEN,
    BAR
}
