package org.tavoo.entity;

public enum TableStatus {
    FREE,
    OCCUPIED
}
