CREATE TABLE locations (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(100) NOT NULL UNIQUE,
    type varchar(20) NOT NULL CHECK (type IN ('INSIDE', 'OUTSIDE'))
);

CREATE TABLE app_users (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username varchar(100) NOT NULL UNIQUE,
    password varchar(255) NOT NULL,
    role varchar(20) NOT NULL CHECK (role IN ('ADMIN', 'SERVER', 'KITCHEN'))
);

CREATE TABLE menu_items (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(120) NOT NULL UNIQUE,
    price numeric(12, 2) NOT NULL CHECK (price > 0),
    category varchar(20) NOT NULL CHECK (category IN ('FOOD', 'ALCOHOL')),
    is_available boolean NOT NULL
);

CREATE TABLE restaurant_tables (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    table_number integer NOT NULL UNIQUE CHECK (table_number > 0),
    seat_count integer NOT NULL CHECK (seat_count > 0),
    location_id bigint NOT NULL,
    status varchar(20) NOT NULL CHECK (status IN ('FREE', 'OCCUPIED')),
    CONSTRAINT fk_restaurant_tables_location
        FOREIGN KEY (location_id) REFERENCES locations(id)
);

CREATE TABLE customer_orders (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    restaurant_table_id bigint NOT NULL,
    server_id bigint NOT NULL,
    status varchar(20) NOT NULL CHECK (status IN ('OPEN', 'PAID')),
    total_amount numeric(12, 2) NOT NULL,
    CONSTRAINT fk_customer_orders_table
        FOREIGN KEY (restaurant_table_id) REFERENCES restaurant_tables(id),
    CONSTRAINT fk_customer_orders_server
        FOREIGN KEY (server_id) REFERENCES app_users(id)
);

CREATE TABLE order_items (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id bigint NOT NULL,
    menu_item_id bigint NOT NULL,
    quantity integer NOT NULL CHECK (quantity > 0),
    notes varchar(500),
    CONSTRAINT fk_order_items_order
        FOREIGN KEY (order_id) REFERENCES customer_orders(id),
    CONSTRAINT fk_order_items_menu_item
        FOREIGN KEY (menu_item_id) REFERENCES menu_items(id)
);
